# stock

./: .gitignore  30d_futures_transaction.py  ETF_portfolio.ipynb  README.md  chip.ipynb  financial.ipynb  history_data.py  loss_to_profit.ipynb  option.ipynb  option_pred.ipynb  portfolio.ipynb  pyproject.toml  requirements.txt  return_top50.ipynb  stock_API.md  stock_data.py  test.ipynb  try.ipynb  volume_analyze.ipynb  volume_analyze1.ipynb
