[tool.poetry]
name = "stock"
version = "0.1.0"
description = ""
authors = ["JulieKuo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
tqdm = "^4.66.1"
yfinance = "^0.2.35"
chinese-calendar = "^1.9.0"
xlsxwriter = "^3.1.9"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
